<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/>
    </parent>


    <groupId>com.demo-microservice</groupId>
    <artifactId>demo-microservice</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>main-service</module>
        <module>discovery-server</module>
        <module>api-gateway</module>
        <module>admin-service</module>
        <module>management-security</module>
        <module>core</module>
        <module>config-storage</module>
        <module>security</module>
        <module>auth-service</module>
        <module>database-migration</module>
        <module>sba</module>
        <module>redis-config</module>
        <module>music-service</module>
    </modules>

    <name>demo-microservice</name>
    <url>http://www.example.com</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <spring.boot.maven.plugin.version>3.1.0</spring.boot.maven.plugin.version>
        <spring.boot.dependencies.version>3.1.0</spring.boot.dependencies.version>
        <spring-cloud.version>2022.0.2</spring-cloud.version>
        <snakeyaml.version>2.2</snakeyaml.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.maven.plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>